tests/machine/x/go/cross_join_filter.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/cross_join_filter.go:15:20: undefined: Pair
../../../tests/machine/x/go/cross_join_filter.go:16:16: undefined: Pair
../../../tests/machine/x/go/cross_join_filter.go:20:32: undefined: Pair

1: //go:build ignore
