tests/machine/x/go/cross_join_filter.go
//go:build ignore

// Generated by Mochi compiler v0.10.25 on 2025-07-14T02:52:23Z

package main

import (
	"fmt"
)

func main() {
	nums := []int{1, 2, 3}
	letters := []string{"A", "B"}
	pairs := func() []Pairs {
		results := []Pairs{}
		for _, n := range nums {
			if (n % 2) == 0 {
				for _, l := range letters {
					results = append(results, Pairs{
						N: n,
						L: l,
					})
				}
			}
		}
		return results
	}()
	fmt.Println("--- Even pairs ---")
	for _, p := range pairs {
		fmt.Println(p.N, p.L)
	}
}
